# aoc_2021

./: Cargo.toml  go.mod
day01/: day01.py
day02/: day02.go  day02.py  day02.rs
day03/: day03.py  day03.rs
day04/: day04.go  day04.py  day04.rs
day05/: day05.py  day05.rs
day06/: day06.py  day06.rs
day07/: day07.py
day08/: day08.py
day09/: day09.py  example.txt
day10/: day10.py  day10.rs
day11/: day11.py
day12/: day12.go  day12.py
day13/: day13.cpp  day13.go  day13.py  day13.rs
day14/: day14.py  day14.rs
day15/: day15.py  day15.rs
day16/: day16.go  day16.py  day16.rs  day16_test.go  pkg.txt
day17/: day17.go  day17.py
day18/: day18.go  day18.rs  day18_test.go
day19/: day19.go
day20/: day20.py
day21/: day21.go  day21.py  day21_parallel.go
day22/: day22.py
day23/: README.md  part1.py  part2.go
day24/: README.md  day24.go
day24/bruteforce/: gen.go  main.go  prog.go
day25/: day25.py
go/priority_queue/: q.go
go/set/: set.go
go/vec/: vec.go
