[package]
name = "aoc_2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"
bitvec = "0.22.3"
clap = "2.34.0"
hex = "0.4.3"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
simple-error = "0.2.3"

[[bin]]
name = "day02"
path = "day02/day02.rs"

[[bin]]
name = "day03"
path = "day03/day03.rs"

[[bin]]
name = "day04"
path = "day04/day04.rs"

[[bin]]
name = "day05"
path = "day05/day05.rs"

[[bin]]
name = "day06"
path = "day06/day06.rs"

[[bin]]
name = "day10"
path = "day10/day10.rs"

[[bin]]
name = "day13"
path = "day13/day13.rs"

[[bin]]
name = "day14"
path = "day14/day14.rs"

[[bin]]
name = "day15"
path = "day15/day15.rs"

[[bin]]
name = "day16"
path = "day16/day16.rs"

[[bin]]
name = "day18"
path = "day18/day18.rs"
